[build-system]
requires = ['poetry-core']
build-backend = 'poetry.core.masonry.api'

[tool.poetry]
name = 'mut'
version = '0.10.2'
description = ''
authors = ['Andrew Aldridge <i80and@foxquill.com>']
license = 'License :: OSI Approved :: Apache Software License'
readme = 'README.rst'

[tool.poetry.dependencies]
python = '>=3.8,<3.12'
boto3 = '1.16.57'
botocore = '1.19.57'
docopt = '0.6.2'
s3transfer = '>0.3.4'
pymongo = '^4.3.2'
jsonpath-ng = "^1.5.3"

[tool.poetry.scripts]
mut = 'mut.helper:main'
mut-images = 'mut.build_images:main'
mut-index = 'mut.index.main:main'
mut-publish = 'mut.stage:main'
mut-redirects = 'mut.redirects.redirect_main:main'

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
pytest = "^7.2.1"
pyinstaller = "^5.8.0"
