[build-system]
requires = ['poetry-core']
build-backend = 'poetry.core.masonry.api'

[tool.poetry]
name = 'mut'
version = '0.10.7'
description = ''
authors = ['Andrew Aldridge <i80and@foxquill.com>']
license = 'License :: OSI Approved :: Apache Software License'
readme = 'README.md'

[tool.poetry.dependencies]
python = '>=3.8,<3.12'
boto3 = '1.16.57'
botocore = '1.19.57'
certifi = '2020.12.5'
chardet = '4.0.0'
cssselect = '1.1.0'
docopt = '0.6.2'
html5-parser = '0.4.9'
idna = '2.10'
jmespath = '0.10.0'
lxml = '^4.9.2'
python-dateutil = '2.8.1'
PyYAML = "6.0.1"
requests = '2.25.1'
s3transfer = '>0.3.4'
six = '1.15.0'
urllib3 = '1.26.5'
pymongo = '^4.3.2'
jsonpath-ng = "^1.5.3"

[tool.poetry.scripts]
mut = 'mut.helper:main'
mut-convert-redirects = 'mut.convert_redirects:main'
mut-images = 'mut.build_images:main'
mut-index = 'mut.index.main:main'
mut-intersphinx = 'mut.intersphinx:main'
mut-publish = 'mut.stage:main'
mut-redirects = 'mut.redirects.redirect_main:main'

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
pytest = "^7.2.1"
pyinstaller = "^5.12.0"
