[build-system]
requires = ['poetry-core']
build-backend = 'poetry.core.masonry.api'

[tool.poetry]
name = 'mut'
version = '0.11.4'
description = ''
authors = ['Andrew Aldridge <i80and@foxquill.com>']
license = 'License :: OSI Approved :: Apache Software License'
readme = 'README.md'

[tool.poetry.dependencies]
python = '>=3.8,<3.13'
boto3 = '1.34.144'
botocore = '1.34.144'
certifi = '2024.7.4'
chardet = '4.0.0'
cssselect = '1.1.0'
docopt = '0.6.2'
idna = '3.7'
jmespath = '0.10.0'
python-dateutil = '2.8.1'
PyYAML = "6.0.1"
requests = '2.32.3'
s3transfer = '>0.3.4'
six = '1.16.0'
pymongo = '^4.8.0'
jsonpath-ng = "^1.5.3"

[tool.poetry.scripts]
mut = 'mut.helper:main'
mut-images = 'mut.build_images:main'
mut-index = 'mut.index.main:main'
mut-intersphinx = 'mut.intersphinx:main'
mut-publish = 'mut.stage:main'
mut-redirects = 'mut.redirects.redirect_main:main'

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
types-pyyaml = "^6.0.12.12"
types-requests = '^2.31.0'
black = "^24.2.2"
pytest = "^7.2.1"
pyinstaller = "^6.9.0"
